--- a/src/com/github/view/viewProfile.fxml
+++ b/src/com/github/view/viewProfile.fxml
@@ -1,128 +1,140 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <Tab fx:id="viewProfileTab" style="-fx-background-radius: 20;" text="View Profile" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.ViewProfile">
-        <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0">
-                <children>
-                    <VBox prefHeight="472.0" prefWidth="138.0">
-                        <children>
-                            <Label text="User Name">
-                                <VBox.margin>
-                                    <Insets left="20.0" top="25.0" />
-                                </VBox.margin>
-                            </Label>
-                            <Label text="First Name">
-                                <VBox.margin>
-                                    <Insets left="20.0" top="25.0" />
-                                </VBox.margin>
-                            </Label>
-                            <Label layoutX="10.0" layoutY="27.0" text="Last Name">
-                                <VBox.margin>
-                                    <Insets left="20.0" top="29.0" />
-                                </VBox.margin>
-                            </Label>
-                            <Label layoutX="10.0" layoutY="44.0" text="E-mail">
-                                <VBox.margin>
-                                    <Insets left="20.0" top="29.0" />
-                                </VBox.margin>
-                            </Label>
-                            <Label layoutX="10.0" layoutY="61.0" text="Phone Number">
-                                <VBox.margin>
-                                    <Insets left="20.0" top="27.0" />
-                                </VBox.margin>
-                            </Label>
-                            <Label layoutX="10.0" layoutY="78.0" text="Role">
-                                <VBox.margin>
-                                    <Insets left="20.0" top="28.0" />
-                                </VBox.margin>
-                            </Label>
-                            <Label text="New Password">
-                                <VBox.margin>
-                                    <Insets left="20.0" top="30.0" />
-                                </VBox.margin>
-                            </Label>
-                            <Label text="Confirm Password">
-                                <VBox.margin>
-                                    <Insets left="20.0" top="30.0" />
-                                </VBox.margin>
-                            </Label>
-                            <Label text="Created on">
-                                <VBox.margin>
-                                    <Insets left="20.0" top="30.0" />
-                                </VBox.margin>
-                            </Label>
-                        </children>
-                    </VBox>
-                    <VBox fx:id="textFieldsWrapper" layoutX="143.0" prefHeight="462.0" prefWidth="347.0">
-                        <children>
-                            <TextField fx:id="userNameTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                <VBox.margin>
-                                    <Insets top="20.0" />
-                                </VBox.margin>
-                            </TextField>
-                            <TextField fx:id="firstNameTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                <VBox.margin>
-                                    <Insets top="20.0" />
-                                </VBox.margin>
-                            </TextField>
-                            <TextField fx:id="lastNameTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                <VBox.margin>
-                                    <Insets top="20.0" />
-                                </VBox.margin>
-                            </TextField>
-                            <TextField fx:id="emailTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                <VBox.margin>
-                                    <Insets top="20.0" />
-                                </VBox.margin>
-                            </TextField>
-                            <TextField fx:id="phoneNbrTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                <VBox.margin>
-                                    <Insets top="20.0" />
-                                </VBox.margin>
-                            </TextField>
-                            <TextField fx:id="roleTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                <VBox.margin>
-                                    <Insets top="20.0" />
-                                </VBox.margin>
-                            </TextField>
-                            <PasswordField fx:id="newPasswordTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                <VBox.margin>
-                                    <Insets top="20.0" />
-                                </VBox.margin>
-                            </PasswordField>
-                            <PasswordField fx:id="confirmPasswordTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                <VBox.margin>
-                                    <Insets top="20.0" />
-                                </VBox.margin>
-                            </PasswordField>
-                            <TextField fx:id="createdDateTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                <VBox.margin>
-                                    <Insets top="20.0" />
-                                </VBox.margin>
-                            </TextField>
+   <content>
+      <AnchorPane minHeight="0.0" minWidth="0.0">
+         <children>
+            <VBox prefHeight="472.0" prefWidth="138.0">
+               <children>
+                  <Label text="User Name">
+                     <VBox.margin>
+                        <Insets left="20.0" top="25.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label text="First Name">
+                     <VBox.margin>
+                        <Insets left="20.0" top="25.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="27.0" text="Last Name">
+                     <VBox.margin>
+                        <Insets left="20.0" top="29.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="44.0" text="E-mail">
+                     <VBox.margin>
+                        <Insets left="20.0" top="29.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="61.0" text="Phone Number">
+                     <VBox.margin>
+                        <Insets left="20.0" top="27.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="78.0" text="Role">
+                     <VBox.margin>
+                        <Insets left="20.0" top="28.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label text="New Password">
+                     <VBox.margin>
+                        <Insets left="20.0" top="30.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label text="Confirm Password">
+                     <VBox.margin>
+                        <Insets left="20.0" top="30.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label text="Created on">
+                     <VBox.margin>
+                        <Insets left="20.0" top="30.0" />
+                     </VBox.margin>
+                  </Label>
+               </children>
+            </VBox>
+            <VBox fx:id="textFieldsWrapper" layoutX="143.0" prefHeight="462.0" prefWidth="347.0">
+               <children>
+                  <JFXTextField fx:id="userNameTextField" disable="true" editable="false" focusColor="#641c24" labelFloat="true" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </JFXTextField>
+                  <JFXTextField fx:id="firstNameTextField" disable="true" editable="false" focusColor="#641c24" labelFloat="true" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </JFXTextField>
+                  <JFXTextField fx:id="lastNameTextField" disable="true" editable="false" focusColor="#641c24" labelFloat="true" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </JFXTextField>
+                  <JFXTextField fx:id="emailTextField" disable="true" editable="false" focusColor="#641c24" labelFloat="true" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </JFXTextField>
+                  <JFXTextField fx:id="phoneNbrTextField" disable="true" editable="false" focusColor="#641c24" labelFloat="true" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </JFXTextField>
+                  <JFXTextField fx:id="roleTextField" disable="true" editable="false" focusColor="#641c24" labelFloat="true" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </JFXTextField>
+                  <JFXPasswordField fx:id="newPasswordPF" disable="true" editable="false" focusColor="#641c24" labelFloat="true" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </JFXPasswordField>
+                  <JFXPasswordField fx:id="confirmPasswordPF" disable="true" editable="false" focusColor="#641c24" labelFloat="true" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </JFXPasswordField>
+                  <JFXTextField fx:id="createdDateTextField" disable="true" editable="false" focusColor="#641c24" labelFloat="true" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </JFXTextField>
                   <HBox alignment="CENTER">
-                     <children>
-                                  <Button fx:id="editButton" mnemonicParsing="false" onAction="#handleEditButtonPressed" prefWidth="80.0" style="-fx-background-radius: 20;" text="Edit" />
-                                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#handleSaveButtonPressed" prefWidth="80.0" style="-fx-background-radius: 20;" text="Save" />
-                        <Button fx:id="exportButton" mnemonicParsing="false" onAction="#handleExportButtonPressed" prefWidth="80.0" style="-fx-background-radius: 20;" text="Export" />
-                     </children>
                      <padding>
                         <Insets top="10.0" />
                      </padding>
+                     <children>
+                        <JFXButton fx:id="editButton" buttonType="RAISED" onAction="#handleEditButtonPressed" prefWidth="80.0" ripplerFill="WHITE" style="-fx-background-color: #641c24;" text="Edit" textFill="WHITE">
+                           <HBox.margin>
+                              <Insets top="20.0" />
+                           </HBox.margin>
+                        </JFXButton>
+                        <JFXButton fx:id="saveButton" buttonType="RAISED" onAction="#handleSaveButtonPressed" prefWidth="80.0" ripplerFill="WHITE" style="-fx-background-color: #641c24;" text="Save" textFill="WHITE">
+                           <HBox.margin>
+                              <Insets left="30.0" right="30.0" top="20.0" />
+                           </HBox.margin>
+                        </JFXButton>
+                        <JFXButton fx:id="exportButton" buttonType="RAISED" onAction="#handleExportButtonPressed" prefWidth="80.0" ripplerFill="WHITE" style="-fx-background-color: #641c24;" text="Export" textFill="WHITE">
+                           <HBox.margin>
+                              <Insets top="20.0" />
+                           </HBox.margin>
+                        </JFXButton>
+                     </children>
                   </HBox>
-                        </children>
-                    </VBox>
-                </children>
-            </AnchorPane>
-        </content>
-    </Tab>
+               </children>
+            </VBox>
+         </children>
+      </AnchorPane>
+   </content>
+</Tab>
