--- a/src/com/github/view/driver.fxml
+++ b/src/com/github/view/driver.fxml
@@ -23,7 +23,7 @@
                      <Label layoutX="14.0" layoutY="14.0" text="Delay :" />
                      <Label layoutX="299.0" layoutY="14.0" text="Message:" />
                      <JFXTreeTableView fx:id="treeView" layoutY="105.0" prefHeight="284.0" prefWidth="550.0" />
-                     <JFXButton layoutX="249.0" layoutY="389.0" onAction="#saveDelayAndMessage" text="Save" />
+                     <JFXButton buttonType="RAISED" layoutX="232.0" layoutY="389.0" onAction="#saveDelayAndMessage" prefHeight="32.0" prefWidth="86.0" ripplerFill="WHITE" style="-fx-background-color: #641c24; -fx-background-radius: 40;" text="Save" textFill="WHITE" />
                      <JFXTextField fx:id="delay" layoutX="14.0" layoutY="54.0" />
                      <JFXTextArea fx:id="driverMessage" layoutX="299.0" layoutY="36.0" prefHeight="62.0" prefWidth="218.0" />
                   </children></AnchorPane>
