--- a/src/com/github/view/taxiDriver.fxml
+++ b/src/com/github/view/taxiDriver.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiDriver">
+<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiDriver">
    <TabPane prefHeight="500.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE">
      <tabs>
          <Tab style="-fx-background-radius: 20;" text="Availability">
@@ -19,14 +19,14 @@
             <content>
                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                   <children>
-                     <TextArea fx:id="Message" layoutX="312.0" layoutY="150.0" prefHeight="200.0" prefWidth="200.0" />
-                     <Label layoutX="312.0" layoutY="103.0" text="Message:" />
-                     <Button fx:id="handleDescription" layoutX="223.0" layoutY="390.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="94.0" style="-fx-background-radius: 20;" text="Save">
+                     <Button fx:id="saveTaxiAvailability" layoutX="223.0" layoutY="390.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="94.0" style="-fx-background-radius: 40; -fx-background-color: #641c24;" text="Save" textFill="#fffefe">
                         <font>
                            <Font size="15.0" />
                         </font></Button>
-                     <CheckBox fx:id="Available" layoutX="21.0" layoutY="157.0" mnemonicParsing="false" text="Available" />
-                     <CheckBox fx:id="UnAvailable" layoutX="21.0" layoutY="192.0" mnemonicParsing="false" text="Unavailable" />
+                     <CheckBox fx:id="available" layoutX="22.0" layoutY="186.0" mnemonicParsing="false" text="Available" />
+                     <CheckBox fx:id="unAvailable" layoutX="22.0" layoutY="227.0" mnemonicParsing="false" text="Unavailable" />
+                     <JFXTextField fx:id="taxiId" layoutX="23.0" layoutY="109.0" />
+                     <Label layoutX="23.0" layoutY="69.0" text="Taxt_Id:" />
                   </children></AnchorPane>
             </content>
          </Tab>
